<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_banlance_wallet"
                style="@style/text_style_0"
                android:layout_weight="1"
                android:tag="@string/wallet_balance"
                android:drawableTop="@mipmap/icon_balance"
                android:drawablePadding="@dimen/layout_default_pading"
                android:textSize="@dimen/text_size_2"
                android:text="@string/wallet_balance"/>
            <TextView
                android:id="@+id/tv_integral_wallet"
                style="@style/text_style_0"
                android:layout_weight="1"
                android:tag="@string/wallet_integral"
                android:drawableTop="@mipmap/icon_level"
                android:textSize="@dimen/text_size_2"
                android:paddingBottom="@dimen/input_vertical_margin"
                android:drawablePadding="@dimen/layout_default_pading"
                android:text="@string/wallet_integral"/>
        </LinearLayout>
        <View
            style="@style/a_line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:gravity="center">
        <TextView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:gravity="center"
            android:textSize="@dimen/text_size_0"
            android:textColor="@color/colorPrimary"
            android:clickable="true"
            android:text="@string/wallet_withdraw"
            android:background="@drawable/shape_circle_maincolor"
            android:id="@+id/tv_withdraw" />
            </LinearLayout>
    </LinearLayout>
        <TextView
            android:id="@+id/tv_toast_wallet"
            style="@style/text_style_3"
            android:layout_width="match_parent"
            android:drawableRight="@mipmap/icon_close"
            android:clickable="true"
            android:gravity="center"
            android:background="@color/b_tm_light"
            android:drawablePadding="@dimen/layout_default_pading"
            android:text="@string/wallet_toast"/>
    </FrameLayout>
</layout>